# openenv

./: .gitignore  Dockerfile  PROJECT_BLUEPRINT.md  README.md  app.py  baseline.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_checklist.py
env/: __init__.py  engine.py  models.py  rewards.py  tasks.py  utils.py
graders/: __init__.py  graders.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  environment.py  graders.py
